# src/modules/SubscriptionHistory/dtos/subscriptionHistoryDTO.ts
@@ -1,0 +1,20 @@
+export interface CreateSubscriptionHistoryDTO {
+  subscriptionId: string;
+  oldPlanId: string;
+  newPlanId: string;
+  changedAt: string;
+}
+
+export interface UpdateSubscriptionHistoryDTO {
+  oldPlanId?: string;
+  newPlanId?: string;
+  changedAt: Date;
+}
+
+export interface SubscriptionHistoryDTO {
+  id: string;
+  subscriptionId: string;
+  oldPlanId: string;
+  newPlanId: string;
+  changedAt: Date;
+}
